--- a/src/main/webapp/WEB-INF/vm/error.vm
+++ b/src/main/webapp/WEB-INF/vm/error.vm
@@ -2,7 +2,7 @@
 <html>
 <head time="$!curTime">
 #parse("header.vm")
-	<title>土著说</title>
+	<title>青柠童书馆</title>
     <style>
 		.input-area {width:100%;margin-top:40px;border:0px;font-size:16px;}
 		.center-msg {padding:30% 10%;font-size:18px;color:#333333;line-height:30px;}
